--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,57 @@
 version: '3.7'
 
 services:
-  app:
+  nginx:
     image: nginx:1.16.1
     container_name: nginx
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./conf/app/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./src:/var/www/html
+      - ./conf/nginx/local.crt:/var/www/ssl/local.crt
+      - ./conf/nginx/local.key:/var/www/ssl/local.key
+      - ./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./log/nginx:/var/log/nginx
+      - ${PROJECT_PATH}:/var/www/html
     networks:
       - app
 
   php:
     build: './dockerfile/php-fpm'
     restart: always
-    container_name: php-fpm
+    container_name: php
     volumes:
-      - ./conf/php/usr/local/etc/php.ini:/usr/local/etc/php.ini
-      - ./src:/var/www/html
+      - ./conf/php/php.ini:/usr/local/etc/php.ini
+      - ${PROJECT_PATH}:/var/www/html
     networks:
       - app
+    environment:
+      PHP_IDE_CONFIG: 'serverName=web'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   cron:
     build: './dockerfile/php-fpm'
     restart: always
     container_name: cron
     volumes:
-      - ./conf/php/usr/local/etc/php.ini:/usr/local/etc/php.ini
-      - ./src:/var/www/html
+      - ./conf/php/php.ini:/usr/local/etc/php.ini
+      - ${PROJECT_PATH}:/var/www/html
     networks:
       - app
 
   mysql:
-    image: mysql:5.7.12
+    image: mysql:8.0
     container_name: mysql
     volumes:
       - ./backup:/var/backup
       - ./mysql:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: mydatabase
-      MYSQL_USER: root
-      MYSQL_PASSWORD: 123456
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     networks:
       - app
 
