--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       - app
 
   php:
-    image: dylanops/php:7.4
+    build: './dockerfile/php-fpm'
+    image: dylanops/php-dev:7.3
     restart: always
     container_name: php
     volumes:
@@ -32,7 +33,8 @@ services:
       - "host.docker.internal:host-gateway"
 
   cron:
-    image: dylanops/cron:7.4
+    build: './dockerfile/php-cli'
+    image: dylanops/cron-dev:7.3
     restart: always
     container_name: cron
     tty: true
