--- a/dockerfile/php-cli/Dockerfile
+++ b/dockerfile/php-cli/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4.20-cli
+FROM php:7.3.29-cli
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
 
@@ -43,17 +43,6 @@ RUN apt-get install -y \
 		xmlrpc \
 		xsl \
         	simplexml
-
-# images
-RUN apt-get install -y \
-	libfreetype6-dev \
-	libjpeg62-turbo-dev \
-	libpng-dev \
-	libgd-dev \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg \
-	&& docker-php-ext-install -j$(nproc) \
-		gd \
-		exif
 
 # database
 RUN docker-php-ext-install -j$(nproc) \
@@ -104,6 +93,23 @@ RUN docker-php-ext-install -j$(nproc) \
 	sysvshm \
     	ctype \
     	iconv
+
+# images
+RUN apt-get install -y \
+    libwebp-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev libxpm-dev \
+    libfreetype6-dev
+
+RUN docker-php-ext-configure gd \
+    --with-gd \
+    --with-webp-dir \
+    --with-jpeg-dir \
+    --with-png-dir \
+    --with-zlib-dir \
+    --with-xpm-dir \
+    --with-freetype-dir && \
+    docker-php-ext-install gd
 
 # Install form source
 
