being support blackfire

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,9 @@ MYSQL_DATABASE=mysqldb
 MYSQL_USER=magento
 MYSQL_PASSWORD=123456
 MYSQL_ROOT_PASSWORD=123456
+
+BLACKFIRE_LOG_LEVEL=1
+BLACKFIRE_SERVER_ID=
+BLACKFIRE_SERVER_TOKEN=
+BLACKFIRE_CLIENT_ID=
+BLACKFIRE_CLIENT_TOKEN=
