--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -22,4 +22,6 @@ server {
     ssl_certificate_key /var/www/ssl/local.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
+    client_max_body_size 10M;
+
 }
