--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - app
 
   php:
-    build: './dockerfile/php-fpm'
+    # build: './dockerfile/php-fpm'
     image: dylanops/php-dev:7.4
     restart: always
     container_name: php
