update es mount data

--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -4,7 +4,7 @@ upstream fastcgi_backend {
 
 server {
     listen 80;
-    server_name pdm.local;
+    server_name magento.local;
     set $MAGE_ROOT /var/www/html;
     set $MAGE_DEBUG_SHOW_ARGS 1;
     include /var/www/html/nginx.conf.sample;
@@ -12,7 +12,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name pdm.local;
+    server_name magento.local;
     set $MAGE_ROOT /var/www/html;
     set $MAGE_DEBUG_SHOW_ARGS 1;
     include /var/www/html/nginx.conf.sample;
