--- a/conf/nginx/default.conf
+++ b/conf/nginx/default.conf
@@ -11,7 +11,7 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name magento.local;
     set $MAGE_ROOT /var/www/html;
     set $MAGE_DEBUG_SHOW_ARGS 1;
