--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - app
 
   php:
-    build: './dockerfile/php-fpm'
+    # build: './dockerfile/php-fpm'
     image: dylanops/php:7.4
     restart: always
     container_name: php
@@ -41,7 +41,7 @@ services:
     container_name: mysql
     volumes:
       - ./data/backup:/var/backup
-      - ./data/mysql-data:/var/lib/mysql
+      - /Data/mysql-data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
@@ -66,18 +66,18 @@ services:
   #   networks:
   #     - app
 
-  elasticsearch:
-    image: elasticsearch:7.13.2
-    container_name: elasticsearch
-    volumes:
-      - ./data/es-data:/usr/share/elasticsearch/data
-    ports:
-      - "9300:9300"
-      - "9200:9200"
-    environment:
-      discovery.type: single-node
-    networks:
-      - app
+  # elasticsearch:
+  #   image: elasticsearch:7.13.2
+  #   container_name: elasticsearch
+  #   volumes:
+  #     - ./data/es-data:/usr/share/elasticsearch/data
+  #   ports:
+  #     - "9300:9300"
+  #     - "9200:9200"
+  #   environment:
+  #     discovery.type: single-node
+  #   networks:
+  #     - app
 networks:
   app:
     driver: bridge
