--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,6 @@ services:
       - app
 
   php:
-    # build: './dockerfile/php-fpm'
     image: dylanops/php:7.4
     restart: always
     container_name: php
@@ -26,8 +25,6 @@ services:
       - ./conf/php/php.ini:/usr/local/etc/php.ini
       - ./conf/php/xdebug:/usr/local/bin/xdebug
       - ./conf/php/opcache:/usr/local/bin/opcache
-      - ./conf/blackfire/blackfire.ini:/usr/local/etc/php/conf.d/blackfire.ini
-      - ./conf/blackfire/agent:/etc/blackfire/agent
       - ${PROJECT_PATH}:/var/www/html
     networks:
       - app
@@ -41,7 +38,7 @@ services:
     container_name: mysql
     volumes:
       - ./data/backup:/var/backup
-      - /Data/mysql-data:/var/lib/mysql
+      - ./data/mysql-data:/var/lib/mysql
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
@@ -66,18 +63,18 @@ services:
   #   networks:
   #     - app
 
-  # elasticsearch:
-  #   image: elasticsearch:7.13.2
-  #   container_name: elasticsearch
-  #   volumes:
-  #     - ./data/es-data:/usr/share/elasticsearch/data
-  #   ports:
-  #     - "9300:9300"
-  #     - "9200:9200"
-  #   environment:
-  #     discovery.type: single-node
-  #   networks:
-  #     - app
+  elasticsearch:
+    image: elasticsearch:7.13.2
+    container_name: elasticsearch
+    volumes:
+      - ./data/es-data:/usr/share/elasticsearch/data
+    ports:
+      - "9300:9300"
+      - "9200:9200"
+    environment:
+      discovery.type: single-node
+    networks:
+      - app
 networks:
   app:
     driver: bridge
