--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     image: mysql:8.0
     container_name: mysql
     volumes:
+      - ./conf/mysql/my.conf:/etc/mysql/my.cnf
       - ./data/backup:/var/backup
       - ./data/mysql-data:/var/lib/mysql
     environment:
