--- a/conf/nginx/default.conf.sample
+++ b/conf/nginx/default.conf.sample
@@ -11,12 +11,13 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name magento.local;
     set $MAGE_ROOT /var/www/html;
     set $MAGE_DEBUG_SHOW_ARGS 1;
     include /var/www/html/nginx.conf.sample;
 
+    client_max_body_size 15M;
     keepalive_timeout   70;
     ssl_certificate     /var/www/ssl/local.crt;
     ssl_certificate_key /var/www/ssl/local.key;
