--- a/dockerfile/php-fpm/Dockerfile
+++ b/dockerfile/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4.20-fpm
+FROM php:8.1.5-fpm
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
 
@@ -40,7 +40,6 @@ RUN apt-get install -y \
 	libxslt-dev \
 	&& docker-php-ext-install -j$(nproc) \
 		dom \
-		xmlrpc \
 		xsl \
 		simplexml
 
@@ -114,7 +113,9 @@ RUN docker-php-ext-install -j$(nproc) \
 	sysvsem \
 	sysvshm \
 	ctype \
-	iconv
+	iconv \
+	fileinfo \
+	xmlwriter
 
 # Install form source
 
@@ -138,7 +139,7 @@ RUN docker-php-source extract \
 	&& echo "opcache.validate_timestamps=0" >> /tmp/docker-php-ext-opcache.ini
 
 # x-debug
-RUN pecl install xdebug-3.0.4 \
+RUN pecl install xdebug-3.1.2 \
 	&& docker-php-ext-enable xdebug \
 	&& echo "zend_extension=xdebug" >> /tmp/docker-php-ext-xdebug.ini \
 	&& echo "xdebug.mode=debug,develop" >> /tmp/docker-php-ext-xdebug.ini \
