--- a/conf/php/xdebug.ini
+++ b/conf/php/xdebug.ini
@@ -4,6 +4,9 @@ xdebug.remote_port=9003
 xdebug.client_host=host.docker.internal
 xdebug.remote_enable=yes
 
+; This setting support debugging with command-line
+; xdebug.start_with_request=yes
+
 ; enable profile
 ; xdebug.mode=profile
 ; xdebug.output_dir=/tmp/xdebug
