--- a/conf/php/xdebug.ini
+++ b/conf/php/xdebug.ini
@@ -1,9 +1,12 @@
 zend_extension=xdebug
 xdebug.mode=develop,debug
-xdebug.start_with_request=yes
 xdebug.remote_port=9003
-xdebug.discover_client_host=true
 xdebug.client_host=host.docker.internal
+xdebug.remote_enable=yes
+
+; This setting support debugging with command-line
+; xdebug.start_with_request=yes
+
 ; enable profile
 ; xdebug.mode=profile
 ; xdebug.output_dir=/tmp/xdebug
