--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ${PROJECT_PATH}:/var/www/html
       - ./conf/nginx/local.crt:/var/www/ssl/local.crt
       - ./conf/nginx/local.key:/var/www/ssl/local.key
       - ./conf/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./log/nginx:/var/log/nginx
-      - ${PROJECT_PATH}:/var/www/html
     networks:
       - app
 
@@ -22,10 +22,11 @@ services:
     restart: always
     container_name: php
     volumes:
+      - ${PROJECT_PATH}:/var/www/html
       - ./conf/php/php.ini:/usr/local/etc/php/php.ini
       - ./conf/php/xdebug:/usr/local/bin/xdebug
       - ./conf/php/opcache:/usr/local/bin/opcache
-      - ${PROJECT_PATH}:/var/www/html
+      - ./conf/php/xdebug.ini:/tmp/docker-php-ext-xdebug.ini
     networks:
       - app
     environment:
@@ -55,6 +56,7 @@ services:
     container_name: elasticsearch
     volumes:
       - ./data/es-data:/usr/share/elasticsearch/data
+      - ./data/es-plugins:/usr/share/elasticsearch/plugins
     ports:
       - "9300:9300"
       - "9200:9200"
