--- a/dockerfile/php-cli/Dockerfile
+++ b/dockerfile/php-cli/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.5-cli
+FROM php:8.1.7-cli
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
 
@@ -123,11 +123,8 @@ RUN docker-php-ext-install -j$(nproc) \
 # x-debug
 RUN pecl install xdebug-3.1.2 \
 	&& docker-php-ext-enable xdebug \
-	&& echo "xdebug.mode=debug,develop" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.remote_port=9003" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.discover_client_host=true" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+	&& echo "xdebug.remote_autostart=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+	&& echo "xdebug.remote_enable=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # clean up
 RUN docker-php-source delete
