--- a/dockerfile/php-fpm/Dockerfile
+++ b/dockerfile/php-fpm/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.5-fpm
+FROM php:8.1.7-fpm
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
 
@@ -141,12 +141,8 @@ RUN docker-php-source extract \
 # x-debug
 RUN pecl install xdebug-3.1.2 \
 	&& docker-php-ext-enable xdebug \
-	&& echo "zend_extension=xdebug" >> /tmp/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.mode=debug,develop" >> /tmp/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.start_with_request=yes" >> /tmp/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.remote_port=9003" >> /tmp/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.discover_client_host=true" >> /tmp/docker-php-ext-xdebug.ini \
-	&& echo "xdebug.client_host=host.docker.internal" >> /tmp/docker-php-ext-xdebug.ini
+	&& echo "xdebug.remote_autostart=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+	&& echo "xdebug.remote_enable=0" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # clean up
 RUN docker-php-source delete
