--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ./conf/php/xdebug:/usr/local/bin/xdebug
       - ./conf/php/opcache:/usr/local/bin/opcache
       - ./conf/php/xdebug.ini:/tmp/docker-php-ext-xdebug.ini
+      - ./conf/php/opcache.ini:/tmp/docker-php-ext-opcache.ini
     networks:
       - app
     environment:
