--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     image: mariadb:10.4.25
     container_name: mysql
     volumes:
+      - ./conf/mysql/my.cnf:/etc/mysql/my.cnf
       - ./data/backup:/var/backup
       - ./data/mysql-data:/var/lib/mysql
     environment:
