update config to save open-search volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,9 @@ services:
       - "discovery.type=single-node"
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
       - "DISABLE_SECURITY_PLUGIN=true"
+    volumes:
+      - opensearch-data:/usr/share/opensearch/data
+      - opensearch-plugins:/usr/share/opensearch/plugins
     networks:
       - app
 
@@ -89,6 +92,10 @@ services:
     command: redis-server --save 60 1 --requirepass MDNcVb924a --loglevel warning
     networks:
       - app
+
+volumes:
+  opensearch-data:
+  opensearch-plugins:
 
 networks:
   app:
