--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - app
 
   php:
-    image: dylanops/php:7.4
+    image: dylanops/php:7.4.30
     restart: always
     container_name: php
     volumes:
@@ -27,6 +27,7 @@ services:
       - ./conf/php/xdebug:/usr/local/bin/xdebug
       - ./conf/php/opcache:/usr/local/bin/opcache
       - ./conf/php/xdebug.ini:/tmp/docker-php-ext-xdebug.ini
+      - ./conf/php/opcache.ini:/tmp/docker-php-ext-opcache.ini
       - ./data/xdebug:/tmp/xdebug
     networks:
       - app
@@ -60,7 +61,7 @@ services:
       - "9200:9200"
     environment:
       - "discovery.type=single-node"
-      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "OPENSEARCH_JAVA_OPTS=-Xms2G -Xmx2G"
       - "DISABLE_SECURITY_PLUGIN=true"
     volumes:
       - opensearch-data:/usr/share/opensearch/data
