--- a/dockerfile/php-cli/Dockerfile
+++ b/dockerfile/php-cli/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:7.4.28-cli
+FROM php:7.2.34-cli
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=1.10.19
 
 # Locales
 RUN apt-get update \
@@ -46,15 +46,13 @@ RUN apt-get install -y \
 		simplexml
 
 # images
-RUN apt-get install -y \
-	libfreetype6-dev \
-	libjpeg62-turbo-dev \
-	libpng-dev \
-	libgd-dev \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg \
-	&& docker-php-ext-install -j$(nproc) \
-		gd \
-		exif
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+    && docker-php-ext-install -j$(nproc) iconv \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd
 
 # database
 RUN docker-php-ext-install -j$(nproc) \
@@ -95,17 +93,6 @@ RUN apt-get install -y \
 	libcurl4-openssl-dev \
 	&& docker-php-ext-install -j$(nproc) curl
 
-# images
-RUN apt-get install -y \
-	libfreetype6-dev \
-	libjpeg62-turbo-dev \
-	libpng-dev \
-	libgd-dev \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg \
-	&& docker-php-ext-install -j$(nproc) \
-		gd \
-		exif
-
 # others
 RUN docker-php-ext-install -j$(nproc) \
 	soap \
@@ -114,8 +101,7 @@ RUN docker-php-ext-install -j$(nproc) \
 	sysvmsg \
 	sysvsem \
 	sysvshm \
-	ctype \
-	iconv
+	ctype
 
 # Install form source
 
