--- a/dockerfile/php-fpm/Dockerfile
+++ b/dockerfile/php-fpm/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:7.4.30-fpm
+FROM php:7.2.34-fpm
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.14
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=1.10.19
 
 # Locales
 RUN apt-get update \
@@ -45,15 +45,13 @@ RUN apt-get install -y \
 		simplexml
 
 # images
-RUN apt-get install -y \
-	libfreetype6-dev \
-	libjpeg62-turbo-dev \
-	libpng-dev \
-	libgd-dev \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg \
-	&& docker-php-ext-install -j$(nproc) \
-		gd \
-		exif
+RUN apt-get update && apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+    && docker-php-ext-install -j$(nproc) iconv \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install -j$(nproc) gd
 
 # database
 RUN docker-php-ext-install -j$(nproc) \
@@ -94,17 +92,6 @@ RUN apt-get install -y \
 	libcurl4-openssl-dev \
 	&& docker-php-ext-install -j$(nproc) curl
 
-# images
-RUN apt-get install -y \
-	libfreetype6-dev \
-	libjpeg62-turbo-dev \
-	libpng-dev \
-	libgd-dev \
-	&& docker-php-ext-configure gd --with-freetype --with-jpeg \
-	&& docker-php-ext-install -j$(nproc) \
-		gd \
-		exif
-
 # others
 RUN docker-php-ext-install -j$(nproc) \
 	soap \
@@ -114,7 +101,6 @@ RUN docker-php-ext-install -j$(nproc) \
 	sysvsem \
 	sysvshm \
 	ctype \
-	iconv \
 	fileinfo \
 	xmlwriter
 
