--- a/conf/php/xdebug.ini
+++ b/conf/php/xdebug.ini
@@ -1,8 +1,7 @@
 zend_extension=xdebug
 xdebug.mode=develop,debug
-xdebug.remote_port=9003
+xdebug.client_port=9003
 xdebug.client_host=host.docker.internal
-xdebug.remote_enable=yes
 
 ; This setting support debugging with command-line
 ; xdebug.start_with_request=yes
