--- a/dockerfile/php-fpm/Dockerfile
+++ b/dockerfile/php-fpm/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:8.1.7-fpm
+FROM php:8.1.12-fpm
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.1.3
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --version=2.2.16
 
 # Locales
 RUN apt-get update \
@@ -25,7 +25,8 @@ RUN apt-get update \
 		gnupg2 \
 		vim \
 		telnet \
-		cron
+		cron \
+		tmux
 
 # Install php extension
 
